--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="about-text slide-up">
                     <h3>Beginner Developer • Learning & Building Daily ⚙️</h3>
                     <p>
-                        Yo! I’m <span class="accent">alone4sure</span> — a beginner developer with a gamer’s heart 🎮.
+                        Yo! I’m <span class="accent">NAYAN RAJPUT</span> — a beginner developer with a gamer’s heart 🎮.
                         I’m still learning the ropes of <span class="accent2">web development</span>, but I love
                         building
                         cool stuff that looks clean and runs smooth.
