--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@
                         <h3>Frontend</h3>
                         <div class="skill-item"><span class="skill-name">HTML/CSS</span>
                             <div class="skill-bar">
-                                <div class="skill-progress" data-progress="45"></div>
-                            </div><span class="skill-percent">45%</span>
+                                <div class="skill-progress" data-progress="100"></div>
+                            </div><span class="skill-percent">100%</span>
                         </div>
                         <div class="skill-item"><span class="skill-name">JavaScript</span>
                             <div class="skill-bar">
-                                <div class="skill-progress" data-progress="20"></div>
-                            </div><span class="skill-percent">20%</span>
+                                <div class="skill-progress" data-progress="50"></div>
+                            </div><span class="skill-percent">50%</span>
                         </div>
                         <div class="skill-item"><span class="skill-name">React</span>
                             <div class="skill-bar">
-                                <div class="skill-progress" data-progress="loadind"></div>
-                            </div><span class="skill-percent">loading</span>
+                                <div class="skill-progress" data-progress="80"></div>
+                            </div><span class="skill-percent">80%</span>
                         </div>
                         <div class="skill-item"><span class="skill-name">Tailwind CSS</span>
                             <div class="skill-bar">
@@ -172,10 +172,15 @@
                     </div>
                     <div class="skill-category">
                         <h3>Backend</h3>
+                        <div class="skill-item"><span class="skill-name">Next.js</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" data-progress="70%"></div>
+                            </div><span class="skill-percent">70%</span>
+                        </div>
                         <div class="skill-item"><span class="skill-name">Node.js</span>
                             <div class="skill-bar">
-                                <div class="skill-progress" data-progress="loading"></div>
-                            </div><span class="skill-percent">Loading</span>
+                                <div class="skill-progress" data-progress="40%"></div>
+                            </div><span class="skill-percent">40%</span>
                         </div>
                         <div class="skill-item"><span class="skill-name">Python</span>
                             <div class="skill-bar">
@@ -184,8 +189,8 @@
                         </div>
                         <div class="skill-item"><span class="skill-name">Express</span>
                             <div class="skill-bar">
-                                <div class="skill-progress" data-progress="loading"></div>
-                            </div><span class="skill-percent">Loading</span>
+                                <div class="skill-progress" data-progress="25"></div>
+                            </div><span class="skill-percent">25%</span>
                         </div>
                     </div>
                     <div class="skill-category">
